Consolidates the the cronjob-example command to 1 line

--- a/reloader-fidget-app/cronjob-example.yaml
+++ b/reloader-fidget-app/cronjob-example.yaml
@@ -19,8 +19,5 @@ spec:
           - name: hello
             image: busybox:1.28
             imagePullPolicy: IfNotPresent
-            command:
-            - /bin/sh
-            - -c
-            - date; echo Hello $MY_POD_SERVICE_ACCOUNT from the Kubernetes cluster
+            command: ["/bin/sh", "-c", "echo Hello from the Kubernetes cronjob!"]
           restartPolicy: OnFailure
