Added to the cronjob command to see files under /usr/share/nginx/html/

--- a/reloader-fidget-app/cm.yaml
+++ b/reloader-fidget-app/cm.yaml
@@ -29,4 +29,15 @@ data:
 
       </html>
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: replacecm
+  namespace: demo
+data:
+  run.sh: |
+    #!/bin/bash
+    set -e
+    echo hello configmap > index.html
+---
 
