--- a/reloader-fidget-app/kustomization.yaml
+++ b/reloader-fidget-app/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - deployment.yaml
 - sa.yaml
 - cronjob-example.yaml
+- locate-cm.yaml
 
 # This file is used to generate ConfigMaps and Secrets for the reloader-fidget-app.
 configMapGenerator:
