--- a/reloader-fidget-app/deployment.yaml
+++ b/reloader-fidget-app/deployment.yaml
@@ -18,15 +18,11 @@ spec:
       containers:
         - name: nginx
           image: nginx
-          command:
-            [
-              "/bin/sh",
-              "-c",
-              "env; ls -l ; ls -l /usr/share/nginx/html/; ls -l /usr/share/nginx/html/secret",
-            ]
           envFrom:
             - configMapRef:
                 name: welcomecm
+            - secretRef:
+                name: nginx-secret-config
           env:
             - name: MY_POD_SERVICE_ACCOUNT
               valueFrom:
@@ -35,9 +31,8 @@ spec:
           volumeMounts:
             - name: configmap-volume
               mountPath: /usr/share/nginx/html/
-            - name: secret-volume
-              mountPath: "/usr/share/nginx/html/secret"
-              readOnly: true
+            - name: nginxconfig-volume
+              mountPath: /etc/nginx/conf.d
       volumes:
         - name: configmap-volume
           configMap:
@@ -47,10 +42,10 @@ spec:
                 path: "welcome.html"
               - key: "welcome.html"
                 path: "index.html"
-        - name: secret-volume
+        - name: nginxconfig-volume
           secret:
-            secretName: mysecret
+            secretName: nginx-secret-config
             defaultMode: 0400
-            #items:
-            #  - key: hello.html
-            #    path: index.html #The hello key from mysecret is available to the container at the path /etc/foo/my-group/my-username instead of at /etc/foo/username
+            items:
+              - key: nginx-custom-config.conf
+                path: "default.conf"
