--- a/reloader-fidget-app/nginx-custom-config.conf
+++ b/reloader-fidget-app/nginx-custom-config.conf
@@ -1,6 +1,6 @@
 server {
-    listen       8090;
-    #listen       80;
+    #listen       8090;
+    listen       80;
     #listen  [::]:80;
     server_name  localhost;
 
@@ -9,9 +9,12 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        hello  hello.html hello.htm;
     }
 
+    location /hello.html {
+        root   /usr/share/nginx/html/hidden;
+        index  hello.html hello.htm;
+    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
