--- a/reloader-fidget-app/patch.yaml
+++ b/reloader-fidget-app/patch.yaml
@@ -21,6 +21,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: welcomecm
+            - configMapRef:
+                name: demo-cm
+            - secretRef:
+                name: nginx-secret-config
           env:
             - name: MY_POD_SERVICE_ACCOUNT
               valueFrom:
@@ -29,6 +33,8 @@ spec:
           volumeMounts:
             - name: configmap-volume
               mountPath: /usr/share/nginx/html/
+            - name: nginxconfig-volume
+              mountPath: /etc/nginx/conf.d
       volumes:
         - name: configmap-volume
           configMap:
@@ -38,4 +44,10 @@ spec:
                 path: "welcome.html"
               - key: "welcome.html"
                 path: "index.html"
-              - key: "hello.html"
+        - name: nginxconfig-volume
+          secret:
+            secretName: nginx-secret-config
+            defaultMode: 0400
+            items:
+              - key: nginx-custom-config.conf
+                path: "default.conf"
